# cpp_rpl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: nice_target_sources.cmake
example/: CMakeLists.txt
example/fire_int/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  assertion.h  basic_types.h  build_config.h  index_based_iterator.h  match_method.h  optional.h  pch.h  unique_function.h  variant.h
src/rpl/: CMakeLists.txt  after_next.h  before_next.h  combine.h  combine_previous.h  complete.h  conditional.h  consumer.h  deferred.h  distinct_until_changed.h  event_stream.h  fail.h  filter.h  flatten_latest.h  lifetime.h  map.h  mappers.h  merge.h  never.h  operators_tests.cpp  producer.h  producer_tests.cpp  range.h  rpl.h  skip.h  take.h  then.h  type_erased.h  variable.h  variable_tests.cpp
src/rpl/details/: callable.h  superset_type.h  type_list.h
third/: CMakeLists.txt
